# health-kiu

./: .env.development  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  manual.psql  rustfmt.toml
.claude/: settings.local.json
Frontend/: nuxt.config.ts  package.json
Frontend/app/: app.vue
Frontend/app/pages/: general.vue  hospital.vue  login.vue  servicios.vue
frontend/app/assets/css/: main.css
frontend/app/pages/: about.vue  index.vue
frontend/app/pages/hola/: [id].vue
health-kiu-frontend/: .env.example  AUTH_README.md  README.md  nuxt.config.ts  package-lock.json  package.json
health-kiu-frontend/app/components/: AppointmentCalendar.vue  UserProfile.vue
health-kiu-frontend/app/composables/: useApi.ts  useAuth.ts
health-kiu-frontend/app/middleware/: auth.ts
health-kiu-frontend/app/pages/: appointments.vue  index.vue  login.vue  my-appointments.vue  news.vue  profile.vue  register.vue  services.vue
health-kiu-frontend/app/pages/specialties/: [id].vue  index.vue
health-kiu-frontend/assets/css/: main.css
health-kiu-frontend/components/: BottomNav.vue  HospitalHeader.vue  MainServiceCards.vue  MedicalServiceCards.vue  ServiceCard.vue  TabNav.vue
health-kiu-frontend/composables/: useApi.ts
health-kiu-frontend/layouts/: default.vue
hk-api/: Cargo.toml
hk-api/src/: main.rs  migrator_main.rs
hk-api/src/lib/: lib.rs  router_app.rs  ulid.rs
hk-api/src/lib/adapters/: crypto.rs  mod.rs
hk-api/src/lib/adapters/repo/: appointments.rs  doctors.rs  login.rs  mod.rs  patient.rs  specialties.rs  user.rs
hk-api/src/lib/adapters/repo/dto/: mod.rs  register_data.rs
hk-api/src/lib/app/: app_state.rs  error.rs  impl.rs  mod.rs  paginated.rs  seaorm_impl.rs
hk-api/src/lib/app/services/: appointments.rs  doctor.rs  login.rs  mod.rs  password_hash.rs  register.rs  specialties.rs
hk-api/src/lib/domain/: appointment_status.rs  auth.rs  mod.rs  name.rs  pagination.rs
hk-api/src/lib/domain/dto/: appointment.rs  doctor.rs  mod.rs  patient.rs  social_security.rs  specialty.rs  user.rs  utils.rs
hk-api/src/lib/domain/internal/: mod.rs  pagination.rs
hk-api/src/lib/handlers/: mod.rs
hk-api/src/lib/handlers/helpers/: deserialize.rs  mod.rs  pagination.rs
hk-api/src/lib/handlers/specialty/: mod.rs
hk-api/src/lib/repo/: doctors.rs  mod.rs  specialties.rs
hk-api/src/lib/routes/: appointments.rs  doctor.rs  error.rs  login.rs  mod.rs  register.rs  specialty.rs
hk-api/src/lib/routes/dto/: doctor.rs  id.rs  mod.rs  name.rs  pagination.rs  patient.rs  session.rs  specialty.rs  token.rs  user.rs
hk-api/src/lib/routes/helpers/: pagination.rs
hk-api/src/lib/services/: doctor.rs  error.rs  mod.rs
hk-api/src/lib/utils/: __utils.rs  error.rs  mod.rs  telemetry.rs  tls.rs
hq-api/: Cargo.toml
hq-api/src/: main.rs  migrator_main.rs
hq-api/src/lib/utils/: __utils.rs  telemetry.rs  tls.rs
migration/: CLAUDE.md  Cargo.toml
migration/src/: lib.rs  m20250904_203638_create_tables.rs  m20250912_212231_some_name.rs  m20251130_000000_add_timestamp_end.rs  main.rs
models/: Cargo.toml
models/src/: lib.rs  ulid.rs  user.rs
models/src/composite/: mod.rs  user_doctor.rs
models/src/entities/: asegurado.rs  cita.rs  doctor.rs  doctor_especialidad.rs  especialidad.rs  habitacion.rs  mod.rs  patient.rs  prelude.rs  user.rs
models/src/id/: mod.rs  ulid.rs
obs-ing-software/: .gitignore  202510 - Diagrama de Paquetes.wsd  202510 - diagrama Despliegue.wsd  202510 - diagrama clase.wsd  Casos de Uso.md  Objetivos.md
obs-ing-software/Arquitectura/: API Server Archictecture.excalidraw.md  Tecnologías Usadas.md
scripts/: README.md  check_data.sql  consultas_utiles.sql  seed_css_panama.sql
