
[workspace]
members = ["hk-api", "migration", "models"]
default-members = ["hk-api"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
chrono-tz = { version = "0.10.4", features = ["serde"] }
color-eyre = "0.6"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = [
    "debug",
    "display",
    "error",
    "from",
    "into",
    "deref",
    "deref_mut",
    "as_ref",
] }
dotenvy = "0.15.7"
fs-err = "3.1.1"
hk-api = { path = "hk-api" }
migration = { path = "migration" }
mime = "0.3.17"
models = { path = "models" }
readonly = "0.2.13"
scopeguard = "1.2"
sea-orm = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = "1.0.219"
serde-aux = "4.6.0"
serde_json = "1.0.143"
serde_with = "3.12.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
    "chrono",
    "env-filter",
    "local-time",
    "parking_lot",
] }
ulid = "1.2.0"
uuid = "1.15.1"
