[package]
name = "hk-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/lib.rs"
name = "hk_api"

[[bin]]
name = "hk_api"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
chrono = { workspace = true, features = ["serde"] }
color-eyre = { workspace = true }
# derive_more = { workspace = true }
dotenvy = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
migration = { workspace = true }
models = { workspace = true }
rcgen = "0.14.3"
readonly = { workspace = true }
rustls = { version = "0.23.31", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
scopeguard = { workspace = true }
sea-orm = { workspace = true, features = ["with-uuid"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }
either = { version = "1.15.0", features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints.rust]
unused = "warn"
