[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { workspace = true }
color-eyre.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[lints.rust]
dead_code = "deny"
