[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true, features = ["postgres"] }
uuid = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
