[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true, features = ["postgres"] }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
